--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <input type="button" id="change-size" value="ok">
       <div class="clear">
       </div>
-
+      <input type="button" id="restart" value="new game">
     </div>
 
     <div id="canvas-block">
